--- a/application.yml
+++ b/application.yml
@@ -24,4 +24,15 @@ eureka:
     service-url:
       defaultZone : http://localhost:8761/eureka/
 
+microservice:
+  payment-service:
+    endpoints:
+      fetchPaymentById:
+        uri: http://PAYMENT-SERVICE/payments/
+
+  user-service:
+    endpoints:
+      fetchUserById:
+        uri: http://USER-SERVICE/users/
+
   
